--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,4 +1,4 @@
-name: Python Application CI/CD
+name: Flask Application CI/CD
 
 on:
   push:
@@ -21,15 +21,20 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     
-    - name: Run tests
+    - name: Lint with flake8
       run: |
-        python -m pytest
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     
-    - name: Deploy to production
-      if: github.ref == 'refs/heads/main'
+    - name: Test with pytest
       run: |
-        # Add your deployment commands here
-        # For example, if using Heroku:
-        # git push heroku main
+        pytest
+
+    - name: Check application startup
+      run: |
+        python -c "import app; app.app.test_client()"
