--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,7 @@ Flask-WTF==0.15.1
 Werkzeug==2.0.1
 pytest==6.2.5
 python-dotenv==0.19.0
-gunicorn==20.1.0 
+flake8==3.9.2
+gunicorn==20.1.0
+pytest-flask==1.2.0
+mysql-connector-python==8.0.26
