Update Config files and tests

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -47,15 +47,8 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     
-    - name: Deploy to Production
+    - name: Deploy to Render
       env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-        HEROKU_APP_NAME: ${{ secrets.HEROKU_APP_NAME }}
+        RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
       run: |
-        if [ -n "$HEROKU_API_KEY" ] && [ -n "$HEROKU_APP_NAME" ]; then
-          curl https://cli-assets.heroku.com/install.sh | sh
-          heroku git:remote -a $HEROKU_APP_NAME
-          git push heroku main
-        else
-          echo "Skipping Heroku deployment - credentials not configured"
-        fi
+        curl -X POST https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
