--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 Flask==2.0.1
 Flask-SQLAlchemy==2.5.1
-Flask-Login==0.5.0
 Flask-WTF==0.15.1
 Werkzeug==2.0.1
 pytest==6.2.5
@@ -11,3 +10,6 @@ pytest-flask==1.2.0
 mysql-connector-python==8.0.26
 email-validator==1.1.3
 cryptography==3.4.7
+Flask-Login==0.6.3
+# Flask-MySQLdb==1.0.1  <-- Comment this if switching to connector-python
+# mysqlclient==2.2.0    <-- Also comment/remove this
