--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,26 @@
+version: "3.9"
+
 services:
   web:
+    container_name: flask_app
     depends_on:
       - db
-    command: python app.py
     build: .
+    command: python app.py
     ports:
-      - "10000:10000"  # Flask app port
+      - "10000:10000"
     env_file:
       - .env
-    
 
   db:
     image: mysql:8.0
+    container_name: mysql_db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: qwerty1234
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: hostel_db
     ports:
-      - "3308:3306"  # Changed from 3307 to 3308
+      - "3307:3306"
     volumes:
       - db_data:/var/lib/mysql
 
